# DeseaseSpreadSimulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.new  CMakePresets.json  CMakeUserPresets.json  DeseaseSpreadSimulation.sln  DeseaseSpreadSimulator.sln  DiseaseSpreadSimulator.sln  LICENSE.txt  README.md  vcpkg.json
data/: Daten und Fakten.txt
src/: CMakeLists.txt  pch.h
src/Desease/: Desease.cpp  Desease.h  DeseaseBuilder.cpp  DeseaseBuilder.h  DeseaseContainment.cpp  DeseaseContainment.h  DeseaseControl.cpp  DeseaseControl.h  Infection.cpp  Infection.h
src/DeseaseSpreadSimulation/: DeseaseSpreadSimulation.vcxproj
src/DeseaseSpreadSimulator/: DeseaseSpreadSimulator.cpp  DeseaseSpreadSimulator.vcxproj  DeseaseSpreadSimulator.vcxproj.filters  Enums.h  RandomNumbers.h  Statistics.h
src/Disease/: Disease.cpp  Disease.h  DiseaseBuilder.cpp  DiseaseBuilder.h  DiseaseContainment.cpp  DiseaseContainment.h  Infection.cpp  Infection.h
src/DiseaseSpreadSimulator/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  DiseaseSpreadSimulator.cpp  DiseaseSpreadSimulator.vcxproj  DiseaseSpreadSimulator.vcxproj.filters  Enums.h  RandomNumbers.h  Statistics.h  pch.h  sampleDiseaseFile.json
src/DiseaseSpreadSimulator/Disease/: Disease.cpp  Disease.h  DiseaseBuilder.cpp  DiseaseBuilder.h  DiseaseContainment.cpp  DiseaseContainment.h  Infection.cpp  Infection.h
src/DiseaseSpreadSimulator/IDGenerator/: IDGenerator.cpp  IDGenerator.h
src/DiseaseSpreadSimulator/Person/: Person.cpp  Person.h  PersonBehavior.cpp  PersonBehavior.h  PersonPopulator.cpp  PersonPopulator.h
src/DiseaseSpreadSimulator/Places/: Community.cpp  Community.h  PlaceBuilder.cpp  PlaceBuilder.h  Places.cpp  Places.h
src/DiseaseSpreadSimulator/Simulation/: MeasureTime.cpp  MeasureTime.h  Simulation.cpp  Simulation.h  System.cpp  TimeManager.cpp  TimeManager.h
src/IDGenerator/: IDGenerator.cpp  IDGenerator.h
src/Person/: Person.cpp  Person.h  PersonBehavior.cpp  PersonBehavior.h  PersonPopulator.cpp  PersonPopulator.h
src/Places/: Community.cpp  Community.h  CommunityBuilder.cpp  CommunityBuilder.h  PlaceBuilder.cpp  PlaceBuilder.h  Places.cpp  Places.h
src/Simulation/: Simulation.cpp  Simulation.h  System.cpp  System.h  TimeManager.cpp  TimeManager.h  TimeObserver.h
src/Systems/: MoveSystem.cpp  MoveSystem.h  PersonStates.cpp  PersonStates.h
tests/: CMakeLists.txt
tests/BoostUnitTests/: BoostUnitTests.cpp  BoostUnitTests.vcxproj  BoostUnitTests.vcxproj.filters
tests/DiseaseSpreadSimulator/: CMakeLists.txt  CommunityTests.cpp  DiseaseContainmentTests.cpp  DiseaseTests.cpp  InfectionTests.cpp  PersonTests.cpp  PlaceTests.cpp  TimeTests.cpp  pch.h  test.cpp
tests/GoogleUnitTests/: CommunityTests.cpp  DeseaseTests.cpp  GoogleUnitTests.vcxproj  PersonTests.cpp  pch.h  test.cpp
tests/UnitTests/: CommunityTests.cpp  DeseaseTests.cpp  DiseaseContainmentTests.cpp  DiseaseTests.cpp  InfectionTests.cpp  PersonTests.cpp  PlaceTests.cpp  StateTests.cpp  SystemTests.cpp  TimeTests.cpp  UnitTests.vcxproj  pch.h  test.cpp
