add_subdirectory(DiseaseSpreadSimulator)

#find_package(imgui CONFIG REQUIRED)
#target_link_libraries(main PRIVATE imgui::imgui)

#find_package(ImGui-SFML CONFIG REQUIRED)
#target_link_libraries(main PRIVATE ImGui-SFML::ImGui-SFML)

#find_package(implot CONFIG REQUIRED)
#target_link_libraries(main PRIVATE implot::implot)
